# embedding_seg

./: .gitignore  README.md  dataset.py  embedding.py  makefile  model.py  osvos.py  osvos_parent_demo.py  parent_demo.py  requirements.txt  utils.py
cpp/: CMakeLists.txt  cuda_helper.h  im2col.cc  im2col_caffe.cc  im2col_caffe.cc.cu  im2col_caffe.h
experiments/config/: default.json  pixel_instance.json  resnet101.json  resnet101_davis_trivial.json  resnet101_davis_trivial.json.bak  resnet101_trivial.json  test_black.json
src/: demo.py  embedding.py  image_reader.py  inference.py  makefile  model.py  ops.py  ops_test.py  train.py  utils.py
src/core/: README.md  builder.py  embedding.py  model.py  ops.py  ops_test.py  test.py  test2.py  test_pickk.py
src/cpp/: .ycm_extra_conf.py  CMakeLists.txt  im2col.cc  im2col_caffe.cc  im2col_caffe.cc.cu  im2col_caffe.h  im2dis.cc  im2dis_caffe.cc  im2dis_caffe.cc.cu  im2dis_caffe.h
src/dataset/: augment.py  reader.py  reader_seg.py  reader_seg_test.py  utils.py
src/models/: common.py  meta.py  meta.py.save  resnet.py  utils.py  vgg.py
src/reader/: __init__.py  image_reader.py
